JBR-5678: Refactor Wayland keyboard support
(cherry picked from commit 070ec5bb8cffdd94f3847a5316426511f4e9fecb)